--- a/src/Components/PlayerGround/Field/Side/Side.css
+++ b/src/Components/PlayerGround/Field/Side/Side.css
@@ -11,7 +11,6 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    z-index: 2;
     background-color: rgba(255, 255, 255, 0);
 }
 
@@ -22,6 +21,7 @@
 
 /* 0, 6, 7, 13 */
 .side_box_MINE {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(7, 10vw);
     grid-template-rows: repeat(2, 14.5vw);
@@ -30,6 +30,7 @@
 } 
 
 .side_box_OPPONENT {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(7, 10vw);
     grid-template-rows: repeat(2, 14.5vw);
